Explorer Show Option 추가